Added connections between Bluespec and Bluestuff AXI4

--- a/hw/src_AWS_P2_CHERI/Makefile
+++ b/hw/src_AWS_P2_CHERI/Makefile
@@ -31,6 +31,7 @@ CONNECTALFLAGS += -lelf
 ############################################################
 
 CONNECTALFLAGS += -DHAVE_BLUESTUFF_AXI
+CONNECTALFLAGS += -DHAVE_ROUTABLE
 CONNECTALFLAGS += -DP2_CORE=CHERI_P2_Core
 
 ############################################################
